# meridian

./: .env.example  .gitignore  BUG_REPORT.md  CLAUDE.md  HUGGINGFACE_TRAINER_SPECS.md  README.md  pyproject.toml  requirements.txt  setup_db.py
configs/: local.yaml  production.yaml
docs/: 00-introduction.md  01-generation-service.md  02-auto-qa-service.md  03-item-bank.md  CODE_WALKTHROUGH.md  DATA_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FOLDER_STRUCTURE.md  LOSS_MASKING_ELI5.md  QUICKSTART.md  vast_ai-deployment.md
docs/aws-migration/: 2024-04-20-aws-training-infrastructure-design.md
docs/aws-migration/diagrams/: README.md  s3-data-flow.dot  (+6 more)
scripts/: approve_item.py  convert_itembank.py  create_mock_data.py  download_model.py  export_items.py  generate_items.py  init_db.py  load_items.py  query_items.py  review_items.py  train_huggingface.py  train_model.py  validate_items.py  verify_chat_templates.py  verify_training_data_format.py
src/: config.py
src/auto_qa/: pipeline.py  schema.py
src/generation/: __init__.py  generator.py
src/item_bank/: database.py
src/training/: __init__.py  converters.py  dataset.py  mlx_dataset.py  mlx_trainer.py  models.py
tests/: conftest.py  test_cli_scripts.py  test_config.py  test_converters.py  test_data_conversion.py  test_generation.py  test_loss_masking.py  test_mlx_dataset.py  test_mlx_trainer.py  test_train_script.py  test_training_dataset.py  test_training_models.py  test_validation_script.py
tests/test_auto_qa/: test_pipeline.py  test_schema.py
tests/test_item_bank/: test_database.py  test_repositories.py
(+10 files in other folders)
